k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: development

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

      - name: frontend

        image: 038215676861.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 20

---

apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: development

spec:

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: development

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /

spec:

  ingressClassName: alb

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80
